Update fixed Crash